# swagger/v1/swagger.yaml
@@ -897,15 +897,20 @@ paths:
             application/json:
               schema:
                 type: object
-  "/api/v2/update_test":
-    post:
+  "/api/v2/tests/{tracking_number}":
+    put:
       summary: Update a laboratory test
       tags:
       - Tests
       security:
       - tokenAuth: []
       description: Update a laboratory test
-      parameters: []
+      parameters:
+      - name: tracking_number
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         '200':
           description: test successfully updated
@@ -931,7 +936,7 @@ paths:
                     example: true
                   message:
                     type: string
-                    example: tracking number not provided
+                    example: order with such test not available
                   data:
                     type: object
                     example: {}
@@ -941,13 +946,9 @@ paths:
             schema:
               type: object
               required:
-              - tracking_number
               - test_status
               - test_type
               properties:
-                tracking_number:
-                  type: string
-                  description: Tracking number of the test
                 arv_number:
                   type: string
                 uuid:
@@ -1029,7 +1030,6 @@ paths:
                           platformserial:
                             type: string
               example:
-                tracking_number: XKCH2500875104
                 arv_number: N/A
                 uuid: af28a817-0ae6-49ed-9cae-a93c33a5eb3a
                 test_status: voided
@@ -1062,7 +1062,90 @@ paths:
                     last_name: namaheya
                     id: '121'
                     phone_number: ''
-                test_results: []
+                test_results:
+                - measure:
+                    name: Viral Load
+                    nlims_code: NLIMS_TI_0294_MWI
+                  result:
+                    value: 100w00
+                    unit: copies/mL
+                    result_date: '2025-09-13 04:10:02'
+                    platform: Abbot
+                    platformserial: '275021258'
+  "/api/v2/tests/{tracking_number}/acknowledge_test_results_receipt":
+    post:
+      summary: Acknowledge test results receipt
+      tags:
+      - Tests
+      security:
+      - tokenAuth: []
+      description: Acknowledge test results receipt
+      parameters:
+      - name: tracking_number
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: test results receipt acknowledged successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: test results receipt acknowledged successfully
+                  data:
+                    type: object
+        '422':
+          description: 'Error: Unprocessable Entity'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: test results receipt already acknowledged
+                  data:
+                    type: object
+                    example: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+              - test_type
+              - date_acknowledged
+              - recipient_type
+              properties:
+                test_type:
+                  type: object
+                  required:
+                  - name
+                  - nlims_code
+                  properties:
+                    name:
+                      type: string
+                    nlims_code:
+                      type: string
+                date_acknowledged:
+                  type: string
+                  format: date-time
+                recipient_type:
+                  type: string
+              example:
+                test_type:
+                  name: HIV Viral Load
+                  nlims_code: NLIMS_TI_0294_MWI
+                date_acknowledged: '2025-02-24T15:19:56.000+02:00'
+                recipient_type: test_results_delivered_to_site_electronically
 servers:
 - url: http://{defaultHost}
   variables:
